package iteracion2;
public class Audio {
    private String archivo;

    public Audio(String archivo) {
        this.archivo = archivo;
    }

    public String getArchivo() {
        return archivo;
    }
}